# bilibili-api

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README.template.md  SECURITY.md  TODO  article.md  changelog.md  channel.json  example.py  index.html  install.py  package.json  pyproject.toml  requirements.txt  send_dynamic_example.py  setup.py  tempCodeRunnerFile.bat  version.txt
.VSCodeCounter/2022-07-13_16-31-56/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.githooks/: commit-msg  pre-commit
.github/: CODING.md  CONTRIBUTING.md  JAVASCRIPT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  issue_template.md
.github/ISSUE_TEMPLATE/: documentation.md  features.md  ivideo.md  needs.md  question.md  suggestion.md  troubleshooting.md
.github/workflows/: npm-publish.yml  python-publish.yml  test.yml  testing.yml
CHANGELOGS/: v1.md  v10.md  v11.md  v12.md  v13.md  v14.md  v15.md  v16.md  v17.md  v2.md  v3.md  v4.md  v5.md  v6.md  v7.md  v8.md  v9.md
MPlayer/: MPlayer.py  README.md  pyproject.toml  requirements.txt  setup.py
MPlayer/mplayer/: __init__.py  __main__.py  window.ui
bilibili-api-js/: .npmignore  README.md  bilibili_api.ts  index.ts  package-lock.json  package.json  tsconfig.json  video.ts
bilibili-api-js/apis/: video.ts
bilibili-api-js/models/: Credential.ts
bilibili-api-js/tests/: video.ts
bilibili-api-js/utils/: aid2bvid.ts  network.ts
bilibili-api-ts/: .npmignore  README.md  audio.d.ts  audio.js  audio.ts  channel.d.ts  channel.js  channel.ts  favorite_list.ts  index.d.ts  index.js  index.ts  package-lock.json  package.json  search.d.ts  search.js  search.ts  test.js  tsconfig.json  user.d.ts  user.js  user.ts  video.d.ts  video.js  video.ts
bilibili-api-ts/apis/: audio.d.ts  audio.js  audio.ts  channel.d.ts  channel.js  channel.ts  favorite_list.ts  search.d.ts  search.js  search.ts  user.d.ts  user.js  user.ts  video.d.ts  video.js  video.ts
bilibili-api-ts/data/: channel.d.ts  channel.js  channel.ts
bilibili-api-ts/models/: BytesReader.d.ts  BytesReader.js  BytesReader.ts  Credential.d.ts  Credential.js  Credential.ts  Danmaku.d.ts  Danmaku.js  Danmaku.ts  Proxy.d.ts  Proxy.js  Proxy.ts
bilibili-api-ts/tests/: main.js  main.ts  search.ts  video.d.ts  video.js  video.ts
bilibili-api-ts/types/: index.d.ts  video.d.ts
bilibili-api-ts/utils/: aid2bvid.d.ts  aid2bvid.js  aid2bvid.ts  network.d.ts  network.js  network.ts  varint.d.ts  varint.js  varint.ts
bilibili_api/: __init__.py  __main__.py  about.json  activity.py  album.py  api.json  app.py  article.py  article_category.py  ass.py  audio.py  audio_uploader.py  bangumi.py  black_room.py  channel.py  channel_series.py  cheese.py  client.py  comment.py  common.py  creative_center.py  credential.py  dynamic.py  emoji.py  exceptions.py  favorite_list.py  festival.py  game.py  garb.py  homepage.py  hot.py  interactive_video.py  live.py  live_area.py  login.py  login_func.py  login_v2.py  manga.py  misc.py  music.py  (+22 more)
bilibili_api/_pyinstaller/: entry_points.py  hook-bilibili_api.py
bilibili_api/clients/: AioHTTPClient.py  CurlCFFIClient.py  HTTPXClient.py  __init__.py  curl_cffi.py
bilibili_api/css/: article-color.css  readme.md
bilibili_api/data/: api.json  appeal.json  article_category.json  article_style.json  article_uploader.json  audio_search_tags.json  bangumi_index_params.json  browser_fingerprint.json  channel.json  emote.json  live_area.json  season_index_info.json  subtitle_lan.json  video_uploader_lines.json  video_uploader_meta_pre.json  video_zone.json  video_zone_v2.json
bilibili_api/errors/: __init__.py
bilibili_api/exceptions/: ApiException.py  ArgsException.py  CookiesRefreshException.py  CredentialNoAcTimeValue.py  CredentialNoBiliJctException.py  CredentialNoBuvid3Exception.py  CredentialNoBuvid4Exception.py  CredentialNoDedeUserIDException.py  CredentialNoSessdataException.py  DanmakuClosedException.py  DynamicExceedImagesException.py  ExClimbWuzhiException.py  FilterException.py  GeetestException.py  GeetestServerNotFoundException.py  GeetestUndoneException.py  InitialStateException.py  LoginError.py  NetworkException.py  ResponseCodeException.py  ResponseException.py  StatementException.py  VideoUploadException.py  WbiRetryTimesExceedException.py  (+1 more)
bilibili_api_old/: article.py  audio.py  channel.py  common.py  dynamic.py  exceptions.py  live.py  user.py  utils.py
bilidown/: README.md  __init__.py  __main__.py
demo/: video_upload.py
design/: logo-newYear.psd  logo-方形.psd  logo.psd
docs/: CNAME  README-ts.md  README.md  _sidebar.md  b23tv.md  configuration.md  get-credential.md  history.html  history.md  index.html  ivifile.md  login.md  opus.md  package-lock.json  package.json  parse_link.md  refresh_cookies.md  request_client.md  search.js  sync-executor.md  theme.css  tree-python.md  vote_id.md  获取 Credential 类所需信息.md  通用解释.md
examples/: best_story.py  ivideo_submit.py  video_upload.py
homepage/: app.py  docs.py  run.bat  server.py  utils.py
js/: .npmignore  package.json  tsconfig.json
scripts/: build_mplayer_zip.py  doc_gen.py  format.py  get_audio_search_tags.py  get_bangumi_index_params.py  get_emoji_list.py  get_video_zone.py  lint.py
tests/: __init__.py  __main__.py  common.py  main.py  test-credential.py  test_album.py  test_app.py  test_article.py  test_article_category.py  test_ass.py  test_audio.py  test_bangumi.py  test_black_room.py  test_channel.py  test_cheese.py  test_client.py  test_comment.py  test_common.py  test_creative_center.py  test_credential.py  test_credential_cookie_file.py  test_dynamic.py  test_emoji.py  test_favorite_list.py  test_festival.py  test_game.py  test_homepage.py  test_hot.py  test_initial_state.py  test_interactive_video.py  test_live.py  test_live_area.py  test_login.py  test_login_func.py  test_manga.py  test_misc.py  test_note.py  test_opus.py  test_rank.py  test_root_functions.py  (+11 more)
ts/: README.md  bilibili_api.ts  package-lock.json  package.json  tsconfig.json  video.ts
v5/: __init__.py  video.py
(+299 files in other folders)
