[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bilibili-api-python"
authors = [{ name = "Nemo2011", email = "yimoxia@outlook.com" }]
maintainers = [{ name = "MoyuScript" }, { name = "Nemo2011" }]
dynamic = ["version", "readme"] # 移除了 "dependencies"
license = { text = "GPL-3.0-or-later" }
description = "The fork of module bilibili-api. 哔哩哔哩的各种 API 调用便捷整合（视频、动态、直播等），另外附加一些常用的功能。"
requires-python = ">=3.9"
keywords = ["bilibili", "api", "spider"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: Chinese (Simplified)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
scripts = { "ivitools" = "bilibili_api.tools.ivitools.__main__:main" }
dependencies = [
    "beautifulsoup4",
    "colorama",
    "lxml",
    "pyyaml",
    "brotli",
    "qrcode",
    "APScheduler",
    "pillow",
    "yarl",
    "pycryptodomex",
    "qrcode_terminal",
    "PyJWT",
    "chompjs"
]

[project.optional-dependencies]
fingerprint = ["fpgen>=1.3.0", "curl-cffi>=0.13.0"]

[tool.setuptools.dynamic]
version = { attr = "bilibili_api.BILIBILI_API_VERSION" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools]
packages = [
    "bilibili_api",
    "bilibili_api.utils",
    "bilibili_api.exceptions",
    "bilibili_api.clients",
    "bilibili_api.tools",
    "bilibili_api.tools.ivitools",
    "bilibili_api.tools.parser",
    "bilibili_api._pyinstaller",
]

[tool.setuptools.package-data]
"*" = ["data/*.*", "data/**/*.*", "py.typed", "requirements.txt"]

[project.entry-points.pyinstaller40]
"hook-dirs" = "bilibili_api._pyinstaller.entry_points:get_hook_dirs"
