[project]
name = "bilibili-api-python"
authors = [{ name = "Nemo2011", email = "yimoxia@outlook.com" }]
maintainers = [{ name = "MoyuScript" }, { name = "Nemo2011" }]
dynamic = ["version"]
license = { text = "GPL-3.0-or-later" }
description = "The fork of module bilibili-api. 哔哩哔哩的各种 API 调用便捷整合（视频、动态、直播等），另外附加一些常用的功能。"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["bilibili", "api", "spider"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: Chinese (Simplified)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
scripts = { "ivitools" = "bilibili_api.tools.ivitools.__main__:main" }
dependencies = [
    "beautifulsoup4",
    "colorama",
    "lxml",
    "pyyaml",
    "brotli",
    "qrcode",
    "APScheduler",
    "pillow",
    "yarl",
    "pycryptodomex",
    "qrcode_terminal",
    "PyJWT",
]

[project.optional-dependencies]
fingerprint = ["fpgen>=1.3.0", "curl-cffi>=0.13.0"]

[project.urls]
Homepage = "https://github.com/Nemo2011/bilibili-api"
Repository = "https://github.com/Nemo2011/bilibili-api"
Documentation = "https://nemo2011.github.io/bilibili-api"
"Bug Report" = "https://github.com/Nemo2011/bilibili-api/issues"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "bilibili_api",
    "bilibili_api.utils",
    "bilibili_api.exceptions",
    "bilibili_api.clients",
    "bilibili_api.tools",
    "bilibili_api.tools.ivitools",
    "bilibili_api.tools.parser",
    "bilibili_api._pyinstaller",
]

[tool.setuptools.package-data]
"*" = ["data/*.*", "data/**/*.*", "py.typed", "requirements.txt"]

[tool.setuptools.dynamic]
version = { attr = "bilibili_api.BILIBILI_API_VERSION" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.format]
line-ending = "cr-lf"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "I",     # isort
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "TID",   # flake8-tidy-imports
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E402",   # module-import-not-at-top-of-file
    "E501",   # line-too-long
    "T201",   # print
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]
exclude = ["bilibili_api/utils/danmaku2ass.py"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["nonebot", "tests/*"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[project.entry-points.pyinstaller40]
"hook-dirs" = "bilibili_api._pyinstaller.entry_points:get_hook_dirs"
