[tool.poetry]
name = "mplayer"
version = "0.0.1"
description = "Bilibili Interactive Video Player"
authors = ["Nemo2011 <yimoxia@outlook.com>"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.4.0"
bilibili-api-python = "^13.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
